--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,2 +1,9 @@
 // color
-$primarycolor: #2196F3;
+$primarycolor: #e51b23;
+
+// text color
+$greycolor: #f8f8f8;
+
+// section
+$section-header-font-color: #333333;
+$section-header-font-size: 1.4em;
