--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,7 @@
 // import layout
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/section';
 
-.default-bgcolor {
-  background-color: $primarycolor;
-}
+// @import pages
+@import 'pages/bootcamp';
