--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-danger py-5">
+<footer class="bg-danger pt-5">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-2 col-12 ">
@@ -50,4 +50,10 @@
 		</div>
 	</div>
 	<br>
+	<div class="bg-dark">
+		<div class="container py-2">
+			<p class="mb-0 text-white text-right">&copy; KencotsTeam</p>
+		</div>
+		<!-- <p>&copy; Keconts</p> -->
+	</div>
 </footer>
