--- a/components/patner/index.html
+++ b/components/patner/index.html
@@ -1,5 +1,5 @@
 <section class="container my-5">
-	<h2 class="text-center font-weight-bold text-muted">Community Patner</h2>
+	<h2 class="text-center font-weight-bold text-black">Community Patner</h2>
 	<div class="row justify-content-center align-items-center">
 		<div class="col-md-5 col-lg-4 col-12">
 			<img class="img-fluid" src="https://kawankoding.com/assets/images/kawankoding-logo.png">
