--- a/components/program_tulition/index.html
+++ b/components/program_tulition/index.html
@@ -1,10 +1,49 @@
-<section style="background: #f8f8f8" class="py-5">
+<link rel="stylesheet" type="text/css" href="components/program_tulition/style.css">
+<section style="background: #f8f8f8" class="py-4">
 	<div class="container">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<h2 class="text-center font-weight-bold text-black ">
+			Program tuition 
+			<u class="text-danger">foo</u>
+		</h2>
+		<div class="row justify-content-center my-4">
+			<div class="col-lg-4 col-12 my-1">
+				<div class="card border-panel">
+					<div class="card-body">
+						<h5 class="card-title text-center font-weight-bold">-----------------</h5>
+						<h2 class="card-title text-center font-weight-bold">Rp. 15.000.000</h2>
+						<p class="d-block text-muted text-center">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4 col-12 my-1">
+				<div class="card border-panel">
+					<div class="card-body">
+						<h5 class="card-title text-center font-weight-bold">-----------------</h5>
+						<h2 class="card-title text-center font-weight-bold">Rp. 15.000.000</h2>
+						<p class="d-block text-muted text-center">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<h2 class="text-center font-weight-bold text-black">
+			Need help with  
+			<u class="text-danger">financing?</u>
+		</h2>
+		<p class="text-center my-4">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
 	</div>
 </section>
