--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -6,4 +6,4 @@ $greycolor: #f8f8f8;
 
 // section
 $section-header-font-color: #333333;
-$section-header-font-size: 1.4em;
+$section-header-font-size: 2rem;
