--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,5 +19,8 @@
 @import 'layout/footer';
 @import 'layout/section';
 
+// import components
+@import 'components/tabs';
+
 // @import pages
 @import 'pages/bootcamp';
