--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -1,14 +1,10 @@
 // shadow
 $shadow-list: (
   (
-    0 2px 2px 0 rgba(0,0,0,0.14),
-    0 3px 1px -2px rgba(0,0,0,0.12),
-    0 1px 5px 0 rgba(0,0,0,0.2)
+    0 .125rem .25rem rgba(0,0,0,.075)!important
   ),
   (
-    0 4px 5px 0 rgba(0,0,0,0.14),
-    0 1px 10px 0 rgba(0,0,0,0.12),
-    0 2px 4px -1px rgba(0,0,0,0.3)
+    0 .5rem 1rem rgba(0,0,0,.15)!important
   ),
   (
     0 8px 17px 2px rgba(0,0,0,0.14),
