delete padding on alumni section

--- a/components/alumni/index.html
+++ b/components/alumni/index.html
@@ -1,7 +1,7 @@
 <!-- style -->
 <link rel="stylesheet" href="components/alumni/style.css" >
 <!-- first panel -->
-<section class="pb-0">
+<section class="py-0">
   <div class="container-fluid banner">
     <div class="section-body">
       <div class="container">
@@ -31,18 +31,18 @@
     </div>
   </div>
 </section>
-  
+
 <!-- float div -->
 <section>
   <div class=" container card overlay-card" style="margin-top:-80px">
     <div class="section-header">
       <div class="section-title text-center">
-        Whats our student 
+        Whats our student
         <span class="underlined text-primary">achieve?</span>
       </div>
     </div>
     <div class="section-body">
-        
+
 
       <div class="row " >
         <div class="col-md-4 col-sm-12 col-xs-12">
@@ -85,7 +85,7 @@
           </div>
         </div>
       </div>
-    
+
 
     </div>
   </div>
@@ -95,7 +95,7 @@
 <section class="pt-0 pb-0" >
   <div class="container">
     <div class="section-body">
-      
+
         <div class="row">
   <div class="col-md-1"></div>
   <div class="col-md-9">
@@ -156,9 +156,9 @@
              </p>
            </div>
          </div>
-       </section>            
-           
-       
+       </section>
+
+
        </div>
       </div>
   </div>
@@ -170,7 +170,7 @@
 </section>
 <div class="container">
 
-  
+
 </div>
 <!-- hire tab-->
 <section class="pb-0">
@@ -181,7 +181,7 @@
       </div>
     </div>
     <div class="section-body">
-        
+
       <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6 text-center">
@@ -199,7 +199,7 @@
 <section class="pb-0">
   <div class="container">
     <div class="section-body">
-     
+
       <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-9">
@@ -253,4 +253,3 @@
     </div>
   </div>
 </section>
-
