extend with listofalumni

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,3 +1,8 @@
+<style type="text/css">
+	::placeholder {
+    	color: white !important;
+    }
+</style>
 <footer class="bg-primary pt-5">
 	<div class="container">
 		<div class="row">
@@ -36,7 +41,7 @@
 				<div class="input-group mb-3">
 				  	<input type="text" class="form-control bg-primary" style="color: white"  placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
 					<div class="input-group-append">
-					    <button class="btn btn-outline-primary bg-white text-primary font-weight-bold" type="button">Button</button>
+					    <button class="btn btn-outline-primary bg-white text-primary font-weight-bold border-1 border-white" type="button">Button</button>
 					</div>
 				</div> 
 			</div>
