--- a/components/tab/index.html
+++ b/components/tab/index.html
@@ -1,10 +1,18 @@
-<section class="bg-grey">
-	<div class="container">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<section class="pt-5 pb-4 bg-white">
+	<div class="container pb-2">
+		<ul class="nav nav-pills">
+		  	<li class="nav-item">
+		    	<a class="nav-link active" href="#">Active</a>
+		  	</li>
+		  	<li class="nav-item">
+		    	<a class="nav-link" href="#">Link</a>
+		  	</li>
+		  	<li class="nav-item">
+		    	<a class="nav-link" href="#">Link</a>
+		  	</li>
+		  	<li class="nav-item">
+		    	<a class="nav-link disabled" href="#">Disabled</a>
+		  	</li>
+		</ul>
 	</div>
 </section>
