--- a/assets/scss/components/tabs.scss
+++ b/assets/scss/components/tabs.scss
@@ -1,12 +1,13 @@
 .nav-underlined {
   .nav-link {
-    @include border-radius($nav-pills-border-radius);
-  	@extend .bg-white;
+    @extend .bg-white;
     @extend .text-muted;
   }
 
   .nav-link.active,
   .show > .nav-link {
     @extend .text-dark;
+    @extend .font-weight-bold;
+    border-bottom: 2px solid $primary-color;
   }
 }
