--- a/components/exam-result/index.html
+++ b/components/exam-result/index.html
@@ -9,12 +9,12 @@
 		</div>
 		<div class="section-body row">
 			<div class="col-md-6">
-				
+
 				<!-- overall score -->
 			<section>
 				<div class="container">
 					<div class="section-body">
-						
+
 						<div class="card">
 							<div class="card-body container">
 								<div class="row">
@@ -30,42 +30,64 @@
 									</div>
 									<div class="col-md-7">
 										<div class="container">
-											<div class="row">
-												<div class="col-md-4">
+											<div class="d-flex">
+												<div class="mr-auto">
 													<p>UI</p>
+												</div>
+												<div class="ml-auto">
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+												</div>
+											</div>
+											<div class="d-flex">
+												<div class="mr-auto">
 													<p>UX</p>
+												</div>
+												<div class="ml-auto">
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+												</div>
+											</div>
+											<div class="d-flex">
+												<div class="mr-auto">
 													<p>Func</p>
+												</div>
+												<div class="ml-auto">
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+												</div>
+											</div>
+											<div class="d-flex">
+												<div class="mr-auto">
 													<p>Code</p>
 												</div>
-												<div class="col-md-8">
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
+												<div class="ml-auto">
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+													<i class="text-dark fas fa-star"></i>
+												</div>
+											</div>
+											<div class="d-flex">
+												<div class="mr-auto">
+													<p>UI</p>
+												</div>
+												<div class="ml-auto">
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
+													<i class="text-primary fas fa-star"></i>
 												</div>
 											</div>
 										</div>
@@ -82,7 +104,7 @@
 													<section>
 														<div class="container">
 															<div class="section-body">
-																
+
 																<div class="card">
 																	<div class="card-body">
 																		<p class="text-bold card-title">Exam Video Result</p>
@@ -102,13 +124,13 @@
 											<div class="row text-center">
 												<div class="col-md-12">
 													<div class="card">
-														<div class="card-body"> 
+														<div class="card-body">
 															<h5 class="card-title text-bold">
 																Exam Repo URL <i class=" text-primary med-icon fab fa-github"></i>
 															</h5>
 														</div>
 													</div>
-													
+
 												</div>
 											</div>
 										</div>
@@ -121,7 +143,7 @@
 				<section>
 					<div class="container">
 						<div class="section-body">
-							
+
 						<div class="card">
 							<div class="card-body">
 								<h4 class="card-title">React Native Detailed Skills</h4>
@@ -138,7 +160,7 @@
 											<p>REST API</p>
 										</div>
 										<div class="col-md-6">
-											
+
 											<p>
 														<i class=" text-danger fas fa-star"></i>
 														<i class=" text-danger fas fa-star"></i>
@@ -207,7 +229,7 @@
 					</div>
 				</section>
 			</div>
-			
+
 		</div>
 	</div>
 </section>
