tambah halaman detail

--- a/components/alumni/index.html
+++ b/components/alumni/index.html
@@ -49,7 +49,7 @@
           <div class="container">
             <div class=" row " style="align-items: center;">
               <div class="col-md-4">
-                 <p class="primary-icon"><i class="fas fa-user-graduate"></i></p>
+                 <p class="primary-icon"><i class="fas fa-graduation-cap "></i></p>
               </div>
               <div class="col-md-8">
                 <p ><h3 class="text-highlight-bold">+100</h3></p>
@@ -105,7 +105,7 @@
          <div class="row">
            <div class="col-md-6 sec-padding">
              <div class="card card-light">
-             <i class=" primary-icon card-item-dist fas fa-money-check"></i>
+             <i class=" primary-icon card-item-dist far fa-sticky-note"></i></i>
                <div class="card-body">
                   <p class="text-bold text-primary card-item-dist">Lorem Ipsum</p>
                   <p class="card-text text-note">Lorem Ipsum adalah contoh teks atau dummy</p></div>
