--- a/components/articles/index.html
+++ b/components/articles/index.html
@@ -7,13 +7,13 @@
 		</div>
 		<div class="section-body">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 ">
 					<section>
 						<div class="container">
 							<div class="section-body">
-								<div class="card">
+								<div class="card z-depth-1">
+									<img class="card-img-top" src="https://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2015/01/14/102337799-robert-shiller.530x298.jpg">
 									<div class="card-body">
-										<img class="card-img-top" src="https://cdn.pixabay.com/photo/2018/06/12/03/41/butterbur-3469942_960_720.jpg">
 										<p class="text-bold card-title">Article 1</p>
 										<p class="card-text">
 											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
@@ -28,9 +28,9 @@
 					<section>
 						<div class="container">
 							<div class="section-body">
-								<div class="card">
+								<div class="card z-depth-1">
+									<img class="card-img-top" src="https://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2015/01/14/102337799-robert-shiller.530x298.jpg">
 									<div class="card-body">
-										<img class="card-img-top" src="https://cdn.pixabay.com/photo/2018/06/12/03/41/butterbur-3469942_960_720.jpg">
 										<p class="text-bold card-title">Article 1</p>
 										<p class="card-text">
 											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
@@ -45,9 +45,9 @@
 					<section>
 						<div class="container">
 							<div class="section-body">
-								<div class="card">
+								<div class="card z-depth-1">
+									<img class="card-img-top" src="https://fm.cnbc.com/applications/cnbc.com/resources/img/editorial/2015/01/14/102337799-robert-shiller.530x298.jpg">
 									<div class="card-body">
-										<img class="card-img-top" src="https://cdn.pixabay.com/photo/2018/06/12/03/41/butterbur-3469942_960_720.jpg">
 										<p class="text-bold card-title">Article 1</p>
 										<p class="card-text">
 											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
