--- a/components/exam-result/index.html
+++ b/components/exam-result/index.html
@@ -1,5 +1,14 @@
 <link rel="stylesheet" href="components/exam-result/style.css" >
+<div class="container">
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-8">
+			
 
+
+		</div>
+	</div>
+</div>
 <section>
 	<div class="container">
 		<div class="section-header">
@@ -8,10 +17,10 @@
 			</div>
 		</div>
 		<div class="section-body row">
-			<div class="col-md-6">
+			<div class="col-md-7">
 				
 				<!-- overall score -->
-			<section>
+			<section class="pr-0 pb-0">
 				<div class="container">
 					<div class="section-body">
 						
@@ -23,74 +32,111 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-md-5 text-center" style="position:relative;">
+									<div class="col-md-4 text-center position-relative">
 										<i class="big-icon text-danger fas fa-star"></i><br>
+										<span class="text-bold text-white position-absolute">4,7</span>
 										<p>Of 5 Stars</p>
-										<span class="text-bold text-white" style="position:absolute; top:35px;right:90px; font-size:25px">4,7</span>
 									</div>
-									<div class="col-md-7">
+									<div class="col-md-8">
 										<div class="container">
 											<div class="row">
-												<div class="col-md-4">
-													<p>UI</p>
-													<p>UX</p>
-													<p>Func</p>
-													<p>Code</p>
+												<div class="col-md-12">
+
+													<div class="container">
+														<div class="row score">
+														<div class="col-md-4 ml-md-auto">
+															<p>UI</p>
+														</div>
+														<div class="col-md-8 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+													</div>
+
+													<div class="container">
+														<div class="row score">
+														<div class="col-md-4 ml-md-auto">
+															<p>UX</p>
+														</div>
+														<div class="col-md-8 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+													</div>
+
+													<div class="container">
+														<div class="row score">
+														<div class="col-md-4 ml-md-auto">
+															<p>Func</p>
+														</div>
+														<div class="col-md-8 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+													</div>	
+
+													<div class="container">
+														<div class="row score">
+														<div class="col-md-4 ml-md-auto">
+															<p>Code</p>
+														</div>
+														<div class="col-md-8 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+													</div>															
+													
 												</div>
-												<div class="col-md-8">
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-												</div>
+										
 											</div>
 										</div>
 
 									</div>
-
 								</div>
-
 							</div>
-
 						</div>
+					</div>
+				</div>
+			</section>
+<!-- exam video --> 
 									<div class="row">
 												<div class="col-md-12">
-													<section>
+													<section class="pr-1 pt-0">
 														<div class="container">
 															<div class="section-body">
 																
 																<div class="card">
 																	<div class="card-body">
 																		<p class="text-bold card-title">Exam Video Result</p>
-																		<iframe width="450" height="300" src="https://www.youtube.com/embed/8XVATypXio0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+																		<iframe class="width-100 height-100" src="https://www.youtube.com/embed/8XVATypXio0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 																	</div>
 																	<div class="card-body">
 																		<p class="text-bold card-title">Exam Interview Result</p>
-																		<iframe width="450" height="300" src="https://www.youtube.com/embed/8XVATypXio0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+																		<iframe class="width-100 height-100" src="https://www.youtube.com/embed/8XVATypXio0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 																	</div>
 																</div>
 
@@ -112,12 +158,11 @@
 												</div>
 											</div>
 										</div>
-				</div>
-			</section>
+
 
 			</div>
-			<div class="col-md-6">
-				<!-- react native daetail skills -->
+			<div class="col-md-5 pl-0">
+				<!-- react native detail skills -->
 				<section>
 					<div class="container">
 						<div class="section-body">
@@ -127,76 +172,139 @@
 								<h4 class="card-title">React Native Detailed Skills</h4>
 								<div class="container">
 									<div class="row">
-										<div class="col-md-6">
-											<p>Components</p>
-											<p>Props</p>
-											<p>State</p>
-											<p>Styling</p>
-											<p>React-Navigation</p>
-											<p>Nativebase</p>
-											<p>Redux</p>
-											<p>REST API</p>
-										</div>
-										<div class="col-md-6">
-											
-											<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
-													<p>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-														<i class=" text-danger fas fa-star"></i>
-													</p>
+
+										<div class="col-md-12">
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>Component</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>	
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>Props</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>State</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>Styling</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>React Navigation</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>	
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>Nativebase</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>	
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>Redux</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>
+											<div class="container">
+													<div class="row score">
+														<div class="col-md-6 ml-md-auto">
+															<p>REST API</p>
+														</div>
+														<div class="col-md-6 mr-md-auto">
+															<p>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class=" text-danger fas fa-star"></i>
+																<i class="  fas fa-star"></i>
+															</p>
+														</div>
+													</div>
+											</div>		
 
 										</div>
+										
 									</div>
 								</div>
 							</div>
@@ -207,7 +315,7 @@
 					</div>
 				</section>
 			</div>
-			
+	
 		</div>
 	</div>
 </section>
