import base/textcolor

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,7 @@
 // import base
 @import 'base/global';
 @import 'base/backgroundcolor';
+@import 'base/textcolor';
 
 // import layout
 @import 'layout/header';
