--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-	::placeholder {
+	._input-footer::placeholder {
     	color: white !important;
     }
 </style>
@@ -39,7 +39,7 @@
 			  		<p class="text-white">----------</p>
 			  	</div>
 				<div class="input-group mb-3">
-				  	<input type="text" class="form-control bg-primary" style="color: white"  placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+				  	<input type="text" class="form-control bg-primary _input-footer" style="color: white"  placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
 					<div class="input-group-append">
 					    <button class="btn btn-outline-primary bg-white text-primary font-weight-bold border-1 border-white" type="button">Button</button>
 					</div>
