--- a/components/exam-result/index.html
+++ b/components/exam-result/index.html
@@ -1,4 +1,6 @@
+<!-- include style.css -->
 <link rel="stylesheet" href="components/exam-result/style.css" >
+<!-- page body -->
 <div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-8"></div>
