--- a/components/alumni/index.html
+++ b/components/alumni/index.html
@@ -47,39 +47,39 @@
       <div class="row " >
         <div class="col-md-4 col-sm-12 col-xs-12">
           <div class="container">
-            <div class=" row " style="align-items: center;">
+            <div class=" row justify-content-center">
               <div class="col-md-4">
-                 <p class="primary-icon"><i class="fas fa-graduation-cap "></i></p>
+                 <p class="primary-icon text-center text-md-left"><i class="fas fa-graduation-cap "></i></p>
               </div>
               <div class="col-md-8">
-                <p ><h3 class="text-highlight-bold">+100</h3></p>
-                <p>Lorem Ipsum adalah contoh</p>
+                <p ><h3 class="text-highlight-bold text-center text-md-left">+100</h3></p>
+                <p class="text-center text-md-left">Lorem Ipsum adalah contoh</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
         <div class="container">
-          <div class="row" style="align-items: center;">
+          <div class="row justify-content-center">
             <div class="col-md-4">
-              <p class="primary-icon"><i class="fas fa-briefcase"></i></p>
+              <p class="primary-icon text-center text-md-left"><i class="fas fa-briefcase"></i></p>
             </div>
             <div class="col-md-8">
-              <p ><h3 class="text-highlight-bold">78%</h3></p>
-          <p>Lorem Ipsum adalah contoh</p>
+              <p ><h3 class="text-highlight-bold text-center text-md-left">78%</h3></p>
+                <p class="text-center text-md-left">Lorem Ipsum adalah contoh</p>
             </div>
           </div>
         </div>
         </div>
         <div class="col-md-4">
           <div class="container">
-            <div class="row" style="align-items: center;">
+            <div class="row justify-content-center">
               <div class="col-md-4">
-                 <p class="primary-icon"><i class="fas fa-donate"></i></p>
+                 <p class="primary-icon text-center text-md-left"><i class="fas fa-donate"></i></p>
               </div>
               <div class="col-md-8">
-                 <p ><h3 class="text-highlight-bold">IDR 8jt</h3></p>
-                  <p>Lorem Ipsum adalah contoh</p>
+                 <p ><h3 class="text-highlight-bold text-center text-md-left">IDR 8jt</h3></p>
+                  <p class="text-center text-md-left">Lorem Ipsum adalah contoh</p>
               </div>
             </div>
           </div>
